--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "axios": "^1.7.2",
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
-    "groq-sdk": "^0.4.0"
+    "groq-sdk": "^0.4.0",
+    "mathjs": "^13.0.0"
   },
   "name": "potato-lite",
   "version": "1.0.0",
